Updated files for function